------------------------------------------------------------------------
r2693 | gaser | 2025-04-23 14:37:09

Changed paths:
 M CHANGES.txt
 M cat_main_amap.m
 M cat_main_amap1639.m
 M cat_main_reportstr.m
 M cat_surf_vol2surf.m
 M spm_cat12.m
 M tbx_cfg_cat.m

Updated: Updated to new SPM12/SPM25 version.
------------------------------------------------------------------------
r2690 | gaser | 2025-04-15 15:01:13

Changed paths:
 M CHANGES.txt

Added:   nii.gz files to templates_MNI152NLin2009cAsym

------------------------------------------------------------------------
r2689 | gaser | 2025-04-15 15:00:15

Changed paths:
 M CHANGES.txt

Removed: nii files in templates_MNI152NLin2009cAsym
Updated: Considered use of zipped nii files in Makefile.
Updated: Consider other surfaces in datafieldname in cat_surf_vol2surf.m

------------------------------------------------------------------------
r2685 | gaser | 2025-04-15 14:59:48

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_surf_vol2surf.m
 D templates_MNI152NLin2009cAsym/Schaefer2018_100Parcels_17Networks_order.nii
 D templates_MNI152NLin2009cAsym/Schaefer2018_200Parcels_17Networks_order.nii
 D templates_MNI152NLin2009cAsym/Schaefer2018_400Parcels_17Networks_order.nii
 D templates_MNI152NLin2009cAsym/Schaefer2018_600Parcels_17Networks_order.nii
 D templates_MNI152NLin2009cAsym/T1.nii
 D templates_MNI152NLin2009cAsym/TPM_Age11.5.nii
 D templates_MNI152NLin2009cAsym/Template_0_GS.nii
 D templates_MNI152NLin2009cAsym/Template_1_Dartel.nii
 D templates_MNI152NLin2009cAsym/Template_1_GS.nii
 D templates_MNI152NLin2009cAsym/Template_2_Dartel.nii
 D templates_MNI152NLin2009cAsym/Template_2_GS.nii
 D templates_MNI152NLin2009cAsym/Template_3_Dartel.nii
 D templates_MNI152NLin2009cAsym/Template_3_GS.nii
 D templates_MNI152NLin2009cAsym/Template_4_Dartel.nii
 D templates_MNI152NLin2009cAsym/Template_4_GS.nii
 D templates_MNI152NLin2009cAsym/Template_5_Dartel.nii
 D templates_MNI152NLin2009cAsym/Template_6_Dartel.nii