@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>VERSION - Computational Anatomy Toolbox for SPM12</title>
+    <title>VERSION - Computational Anatomy Toolbox for SPM12/SPM25</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <link rel="stylesheet" type="text/css" href="css/cat.css" />
   </head>
